# BitFun

./: AGENTS-CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  desktop-package.yml  nightly.yml
BitFun-Installer/: README.md  package.json
BitFun-Installer/scripts/: build-installer.cjs
BitFun-Installer/src-tauri/: tauri.conf.json
scripts/: dev.cjs
src/apps/desktop/: Cargo.toml  tauri.conf.json
src/apps/desktop/src/: lib.rs
src/apps/relay-server/: Cargo.toml
src/crates/core/: Cargo.toml  build.rs
src/crates/core/tests/: remote_mcp_streamable_http.rs
src/mobile-web/: package-lock.json  package.json
src/mobile-web/src/pages/: SessionListPage.tsx
src/web-ui/: README.md  README.zh-CN.md  package.json
src/web-ui/src/component-library/: README.md  README.zh-CN.md
tests/e2e/: .gitignore  E2E-TESTING-GUIDE.md  E2E-TESTING-GUIDE.zh-CN.md  README.md  README.zh-CN.md  package.json
tests/e2e/config/: capabilities.ts  wdio.conf.ts  wdio.conf_l0.ts  wdio.conf_l1.ts
tests/e2e/helpers/: screenshot-utils.ts  workspace-helper.ts  workspace-utils.ts
tests/e2e/page-objects/: StartupPage.ts
tests/e2e/specs/: l0-i18n.spec.ts  l0-navigation.spec.ts  l0-notification.spec.ts  l0-open-settings.spec.ts  l0-open-workspace.spec.ts  l0-smoke.spec.ts  l0-tabs.spec.ts  l0-theme.spec.ts  l1-chat-input.spec.ts  l1-editor.spec.ts  l1-file-tree.spec.ts  l1-git-panel.spec.ts  l1-navigation.spec.ts  l1-workspace.spec.ts
(+106 files in other folders)
